@@ -1,3 +1,8 @@
+2020-01-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/90677
+	* c-c++-common/pr90677-2.c: New test.
+
 2019-12-30  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	Backport from trunk
